--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
   "dependencies": {
     "express": "^4.18.1"
-  }
+  },
+  "name": "final_project_cataquiz_jerickvegile",
+  "version": "1.0.0",
+  "description": "This the final project for the backend101 using node.js , express and monggo",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Jerick Vegile M. cataquiz",
+  "license": "ISC"
 }
